# TCPClientServer

./: .gitignore  CMakeLists.txt  README.md  README.txt  TCPClientServer.sln
CalculatorServer/Calculator-TCPClient/: CMakeLists.txt  CalculatorClient.cpp
CalculatorTCPClient/: CMakeLists.txt  CalculatorClient.cpp  CalculatorTCPClient.vcxproj
ClientServerCalculator/: CMakeLists.txt
ClientServerCalculator/Calculator-TCPClient/: CMakeLists.txt
ClientServerCalculator/DataGenerator/: CMakeLists.txt  DataGenerator.cpp
ClientServerCalculator/TCPClient/: CMakeLists.txt  Calculator-TCPClient.cpp  ClientActions.hpp  DataScraper.cpp  DataScraper.h  DataScraper.hpp  client_data.cpp  client_data.hpp
ClientServerCalculator/TCPServer/: CMakeLists.txt  Calculator-TCPServer.cpp  ServerAction.hpp  TCPServer.cpp  server_data.hpp
ClientServerFramework/: CMakeLists.txt  ClientServerFramework.cpp  ClientServerFramework.vcxproj  ClientServerFramework.vcxproj.filters
ClientServerFramework/Client/: AsyncConnector.hpp  Client.hpp  Connector.hpp  Connector.old.hpp  Scraper.hpp  TCPClient.hpp  TCPConnector.hpp
ClientServerFramework/Server/: AsyncServer.hpp  Response.h  Response.hpp  Session.hpp  TCPAsyncServer.hpp  TCPSession.hpp
ClientServerFramework/Shared/: defines.hpp
ClientServerFramework/Shared/Connection/: ClientConnection.hpp  Connection_base.hpp  ServerConnection.hpp
ClientServerFramework/Shared/Container/: SafeQueue.hpp
ClientServerFramework/Shared/DesignPatterns/: Singleton.hpp
ClientServerFramework/Shared/IO/: CompressionFilter.hpp  DefaultFilter.hpp  Filter_base.hpp  Filter_base_factory.hpp  IO_base.hpp  IO_base_factory.hpp  SSL.hpp  SSL_IO.hpp  UnsecuredIO.hpp
ClientServerFramework/Shared/Messaging/: Response.h
ClientServerFramework/Shared/SSL/: SSL.hpp
ClientServerFramework/Shared/Serialization/: ClientConnection.hpp  ClientConnection_base.hpp  Connection.hpp  Connection_base.hpp  Connection_impl.hpp  IO_base.hpp  IO_base_factory.hpp  IO_base_fwd.hpp  SSLClientConnection.hpp  SSLConnection.hpp  SSLConnection_base.hpp  SSLServerConnection.hpp  SSL_IO.hpp  Serialization_base.hpp  ServerConnection.hpp  ServerConnection_base.hpp  UnsecuredIO.hpp  accepting_adaptor.hpp
ClientServerStringReversal/Shared/: Data.h
ClientServerStringReversal/TCPClient/: CMakeLists.txt  TCPClient.cpp
ClientServerStringReversal/TCPServer/: Action.h  Action.hpp  CMakeLists.txt  TCPServer.cpp
Scrap/: Scrap.vcxproj  Source.cpp
TCPClientServer/: TCPClientServer.vcxproj
ssl/: ca_cert.pem  dh1024.pem  newcert.pem  newkey.pem  ssl_priv.pem
